packages/typ/tests/fixtures/diagnostics/0796_polyvar_coercion_payload_mismatch_04.ml
let bad_delta (x : [ `A of int ]) : [ `A of bool ] =
  (x :> [ `A of bool ])
